Fix displaying icon after caret.
To avoid displaying text and icon under the caret, the bootstrap
equivalent style has been added. However this one is dependent on
Selectic size choices.

Title have been added on single selected item and placeholder in case
they are truncated with ellipsis. A better solution (to display the
title only when the text is truncated) should be found and developed.

--- a/src/css/selectic.css
+++ b/src/css/selectic.css
@@ -63,6 +63,10 @@
 .selectic .has-feedback {
     position: relative;
 }
+.selectic .has-feedback .form-control {
+    padding-right: calc(var(--selectic-input-height) + 4px);
+}
+
 .selectic .form-control-feedback.fa,
 .selectic .form-control-feedback {
     position: absolute;
